Fixed overflow on the business cards

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -253,7 +253,7 @@ p.spacing {
 
 /* Width and Heights */
 .w100 {
-    width: 100%
+    width: 100%;
 }
 
 .w70 {
